[package]
name = "vivoh-quic-dash"
version = "0.1.0"
edition = "2021"
authors = ["Vivoh, Inc."]
license = "Proprietary"
description = "DASH over QUIC"

[[bin]]
name = "vqd-server"
path = "src/server.rs"

[[bin]]
name = "vqd-publisher"
path = "src/publisher.rs"

[dependencies]
# Core
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
bytes = "1.5"
thiserror = "2"
futures-util = "0.3"
byteorder = "1.5"
uuid = { version = "1.3", features = ["v4"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
serde_json = "1.0"

# Logging
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# File system monitoring and I/O
notify = "6.1"
walkdir = "2.5"

# XML parsing for MPD
quick-xml = { version = "0.29.0", features = ["serialize"] }

# CMAF/DASH parsing support
mp4 = "0.14"

# Optional future: QUIC/WebTransport
quinn = { version = "0.11", features = ["ring", "rustls", "runtime-tokio"] }
web-transport-quinn = "0.5"

# Command line (if needed)
clap = { version = "4.5", features = ["derive"] }

# Networking utilities (used in server)
http = "1.0"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1.5", features = ["full", "http2"] }
hyper-util = { version = "0.1.10", features = ["tokio", "full"] }
tokio-util = { version = "0.7", features = ["compat"] }
url = "2.5"

# TLS & Crypto
rustls = { version = "0.23" }
tokio-rustls = "0.26"
rustls-native-certs = "0.7"
ring = "0.17"
webpki = "0.22"

[build-dependencies]
rustc_version = "0.4"

[profile.release]
debug = false
lto = true
opt-level = 3
codegen-units = 1
